# ai-tour-26-zava-diy-dataset-plus-mcp

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
_blogs/blog/: index.html
about/: index.html
architecture/: index.html
data/: requirements.txt
data/database/: README.md  generate_safety_docs_gpt4.py  generate_zava_sql_server.py
data/personas/: README.md  personas.yaml
data/product-raft/: generate_product_pages.py
getting-started/: index.html
includes/introduction-event/: index.html
includes/introduction-self-guided/: index.html
includes/lab-6-finishing-up-event/: index.html
includes/lab-6-finishing-up-self-guided/: index.html
infra/: cohere-rerank-serverless.bicep  deploy.ps1  deploy.sh  foundry.bicep  main.bicep  main.parameters.json  postgres-openai-role.bicep  postgres.bicep
infra/ai/: ai-environment.bicep  hub.bicep  project.bicep
lab-1-open-workshop/: index.html
lab-2/: index.html
lab-6-finishing-up/: index.html
overview/: index.html
resources/: index.html
scripts/: generate_embedding.py  hybrid_ranker_search.py  hybrid_rrf_search.py  init-db.sh  keyword_query.sql  keyword_search.py  setup_azure_ai.py  sqlquery.txt  vector.txt  vector_query.sql  vector_search.py
security/: index.html
src/python/: requirements.txt
src/python/web_app/: web_app.py
src/shared/static/: chat.js  index.html  styles.css
summary/: index.html
