[project]
name = "ai-tour-26-zava-diy-dataset-plus-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13,<4.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "azure-ai-agents==1.1.0b4",
    "azure-ai-projects==1.0.0b12",
    "azure-identity>=1.23.0,<2.0.0",
    "fastapi>=0.115.14,<0.116.0",
    "httpx>=0.28.1,<0.29.0",
    "mcp>=1.10.0,<2.0.0",
    "openai>=1.97.0,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "python-multipart>=0.0.20,<0.0.30",
    "reportlab>=4.4.3",
    "rich>=14.0.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# Enable import sorting
select = ["I"]

[tool.ruff.lint]
extend-select = [
  "B",
  "C4",
  "PT",
  "RET",
  "SIM",
  "ARG",
  "PTH",
  "RUF",
  "PLE",
  "ANN",
  "RUF",
  "I"  # Add 'I' to extend-select to activate import sorting
]

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = [
  "PLE1142", # await-outside-async: Jupyter Notebooks support top level await
  "E402", # module-import-not-at-top-of-file: It's relatively common to have to import "just in time"
  "E501", # line-too-long: Let black handle this
]

# isort configuration
[tool.isort]
profile = "black"  # Use the same line length and styling as Black
line_length = 120  # Consistent line length with Ruff and Black
